# awesome-web3dev

./: README.md  send-sol.js
counter_example/cosmwasm/: NOTICE  README.md
counter_example/cosmwasm/artifacts/: checksums.txt  checksums_intermediate.txt  cosmwasm.wasm
counter_example/cosmwasm/examples/: schema.rs
counter_example/cosmwasm/src/: contract.rs  msg.rs  state.rs
counter_example/ethereum/: package-lock.json  package.json
counter_example/ethereum/contracts/: Counter.sol  Token.sol
counter_example/ethereum/test/: counter.spec.js  token.spec.js
counter_example/solana/: README.md
counter_example/sui/: Move.toml  sui.log.2022-07-19
counter_example/terra/: keys.terrain.js  package-lock.json  refs.terrain.json
entry-example/: Cargo.toml  NOTICE  README.md
entry-example/src/: contract.rs  error.rs  msg.rs  state.rs
escrow-example/solana-escrow/: Cargo.toml
escrow-example/solana-escrow/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
snarkjs_example/: challenge_phase2_0003  circuit.r1cs  circuit.r1cs.json  circuit_0000.zkey  circuit_0001.zkey  circuit_0002.zkey  circuit_0003.zkey  circuit_final.zkey  multiplier2_0000.zkey  multiplier2_0001.zkey  proof.json  response_phase2_0003  verification_key.json  verifier.sol
snarkjs_example/circom_demo/: witness.wtns
snarkjs_example/circuit_js/: circuit.wasm
solana-my-money/: README.md
solana-my-money/learn_src/: Anchor.toml
sui-sword-example/: wallet.log.2022-07-08
test-package/: Move.toml  wallet.log.2022-07-06
test-package/sources/: m1.move
(+34 files in other folders)
